[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napcat-qce"
version = "1.0.0"
description = "NapCat-QCE (QQ聊天记录导出工具) Python SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "NapCat-QCE Contributors"}
]
keywords = ["qq", "chat", "export", "napcat", "qce", "message", "backup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
websocket = ["websocket-client>=1.0.0"]
async = ["aiohttp>=3.8.0", "websockets>=10.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.990",
]
all = [
    "websocket-client>=1.0.0",
    "aiohttp>=3.8.0",
    "websockets>=10.0",
]

[project.urls]
Homepage = "https://github.com/shuakami/qq-chat-exporter"
Documentation = "https://github.com/shuakami/qq-chat-exporter#readme"
Repository = "https://github.com/shuakami/qq-chat-exporter"
Issues = "https://github.com/shuakami/qq-chat-exporter/issues"

[tool.setuptools.packages.find]
include = ["napcat_qce*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
